# PeakRDL-regblock

./: .gitignore  CHANGE.md  CONTRIBUTING.md  MANIFEST.in  README.md  hand-coded.sv  pyproject.toml  setup.py  tst.py  x.rdl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
doc/: architecture.rst  conf.py  index.rst  limitations.rst
doc/cpuif/: apb3.rst
doc/logbooks/: 000-Main-Logbook  Interrupts  Signal Dereferencer  Some Classes  Validation Needed
doc/props/: addrmap.rst  field.rst  reg.rst  rhs_props.rst  signal.rst
docs/: addressing.rst  api.rst  architecture.rst  conf.py  configuring.rst  faq.rst  hwif.rst  index.rst  licensing.rst  limitations.rst  requirements.txt
docs/cpuif/: advanced.rst  ahb.rst  apb.rst  apb3.rst  apb4.rst  avalon.rst  axi4lite.rst  customizing.rst  internal_protocol.rst  introduction.rst  obi.rst  passthrough.rst  wishbone.rst
docs/dev_notes/: Alpha-Beta Versioning  Hierarchy-and-Indexing  Program Flow  Resets  Signal Dereferencer  Validation Needed
docs/diagrams/: diagrams.odg  rt-readback-fanin.drawio
docs/props/: field.rst  reg.rst  rhs_props.rst  signal.rst
docs/rdl_features/: external.rst
docs/udps/: cpuif.rst  extended_swacc.rst  fixedpoint.rst  intro.rst  read_buffering.rst  signed.rst  write_buffering.rst
hdl-src/: README.md  ahb_intf.sv  apb3_intf_pkg.vhd  apb4_intf.sv  apb4_intf.vhd  arrays.vhd  avalon_mm_intf.sv  axi4lite_intf.vhd  axi4lite_intf_pkg.vhd  obi_intf.sv  reg_utils.vhd  regblock_udps.rdl  wishbone_intf.sv
peakrdl/regblock/: addr_decode.py  dereferencer.py  exporter.py  forloop_generator.py  hwif.py  module_tmpl.sv  readback_mux.py  scan_design.py  signals.py  struct_generator.py  utils.py  utils_tmpl.sv
src/peakrdl_regblock/: __about__.py  __peakrdl__.py  addr_decode.py  dereferencer.py  entry_points.py  exporter.py  external_acks.py  forloop_generator.py  identifier_filter.py  module_tmpl.sv  module_tmpl.vhd  package_tmpl.sv  parity.py  scan_design.py  struct_generator.py  sv_int.py  udps.py  utils.py  validate_design.py  vhdl_int.py
src/peakrdl_regblock_vhdl/: __peakrdl__.py  addr_decode.py  dereferencer.py  exporter.py  external_acks.py  identifier_filter.py  module_tmpl.vhd  package_tmpl.vhd  parity.py  scan_design.py  struct_generator.py
test/: .gitignore  README.md  pytest.ini  requirements.txt  run.sh  src.f  tb.sv  test_regblock.rdl  test_regblock.sv  test_regblock_pkg.sv  vlog_args.f  wave.do
test/drivers/: apb3_intf_driver.sv
test/lib/: regblock_testcase.py  sim_testcase.py  tb_base.sv  test_params.py
test/test_bitwise_reduce/: tb_template.sv
test/test_counter_basics/: regblock.rdl  tb_template.sv
test/test_counter_threshold/: tb_template.sv
test/test_field_types/: tb.sv  tb_template.sv
test/test_hw_access/: regblock.rdl  tb_template.sv
test/test_onread_onwrite/: tb_template.sv  testcase.py
test/test_pipelined_cpuif/: tb_template.sv
test/test_precedence/: regblock.rdl
test/test_read_fanin/: tb.sv  tb_template.sv  testcase.py
test/test_reset_signals/: regblock.rdl
test/test_singlepulse/: tb_template.sv
test/test_structural_sw_rw/: tb.sv  tb_template.sv  testcase.py
test/test_swacc_swmod/: regblock.rdl  tb.sv  tb_template.sv
test/test_swwe/: tb_template.sv
tests/: .coveragerc  README.md  conftest.py  mypy.ini  pylint.rc  requirements.txt  run.sh  settings.sh
tests/lib/: base_testcase.py  external_block.sv  external_reg.sv  sim_testcase.py  sv_line_anchor.py  synth_testcase.py  tb_base.sv  test_params.py
tests/test_bitwise_reduce/: regblock.rdl  testcase.py
tests/test_broadcast_arrays/: __init__.py  regblock.rdl  tb_template.sv  testcase.py
tests/test_broadcast_basic/: regblock.rdl  tb_template.sv  testcase.py
tests/test_broadcast_regfiles/: __init__.py  regblock.rdl  tb_template.sv
tests/test_buffered_swacc_swmod/: regblock.rdl  tb_template.sv  testcase.py
tests/test_counter_basics/: regblock.rdl
tests/test_counter_saturate/: regblock.rdl  tb_template.sv
tests/test_counter_threshold/: regblock.rdl
tests/test_cpuif_err_rsp/: regblock.rdl  tb_template.sv  testcase.py
tests/test_enum/: regblock.rdl  tb_template.sv
tests/test_extended_swacc_swmod/: regblock.rdl  tb_template.sv
tests/test_external/: regblock.rdl  tb_template.sv  testcase.py
tests/test_field_types/: regblock.rdl  tb_template.sv  testcase.py
tests/test_fixedpoint/: regblock.rdl  tb_template.sv
tests/test_interrupts/: regblock.rdl  tb_template.sv
tests/test_map_size/: regblock.rdl  tb_template.sv
tests/test_only_external_blocks/: regblock.rdl  tb_template.sv  testcase.py
tests/test_onread_onwrite/: regblock.rdl  tb_template.sv
tests/test_parity/: regblock.rdl  tb_template.sv  testcase.py
tests/test_parity_bytewise/: regblock.rdl  tb_template.sv  testcase.py
tests/test_pipelined_cpuif/: regblock.rdl  tb_template.sv  testcase.py
tests/test_pkg_params/: regblock.rdl  tb_template.sv  testcase.py
tests/test_precedence/: tb_template.sv
tests/test_read_buffer/: regblock.rdl  tb_template.sv
tests/test_read_fanin/: regblock.rdl  tb_template.sv  testcase.py
tests/test_swwe/: regblock.rdl
(+246 files in other folders)
